Neue component für erste auswahl

--- a/old html css stuff/index.html
+++ b/old html css stuff/index.html
@@ -31,17 +31,17 @@
         </section>
 
         <section id="movieSelect">
-            <div class="select-wrapper">
+          
                 <select name="movieDropdown" id="movieDropdown">
             <option value="Joker3D">Joker 3D</option>
           </select>
-            </div>
+            
             <select name="movieDropdown" id="dateDropdown">
           <option value="Joker3D">08.11.2019</option>
         </select>
             <select name="movieDropdown" id="cinemaDropdown">
           <option value="Joker3D">Kino 09</option>
-        </select
+            </select>
         </section>
         <section class="headline">
             <h2>Choose your <span class="highlightWord">seat</span></h2>
