--- a/CineTicket/public/index.html
+++ b/CineTicket/public/index.html
@@ -27,6 +27,8 @@
     -->
     <title>React App</title>
     <link rel="stylesheet" href="https://use.typekit.net/toh0amy.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" />
+    
 
   </head>
   <body>
